<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNome"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rg" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editRg"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpf" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editCpf"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nascimento" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNascimento"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/pagina1"
            android:clickable="false"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/button1"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/pagina2"
            android:id="@+id/button2"
            android:onClick="irTela2"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/pagina3"
            android:id="@+id/button3"
            android:onClick="irTela3"
            tools:ignore="ButtonStyle" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/pagina4"
            android:id="@+id/button4"
            android:onClick="irTela4"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>